--- a/LifeCycle/LifeCycle/MainWindow.xaml
+++ b/LifeCycle/LifeCycle/MainWindow.xaml
@@ -36,8 +36,8 @@
                     <Label Content="LifeCycle" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="100" FontWeight="Bold" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Height="118" Width="295"/>
                     <Label x:Name="startWorkoutCountdownLabel" Content=""  Margin="292,7,240.597,179" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="64" FontWeight="Black" Foreground="#FFDE6D0F" Width="419" d:IsHidden="True" Grid.Row="2" Height="95"/>
                     <k:KinectTileButton Content="Done" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="343,109.419,0,0" VerticalAlignment="Top" Width="250" x:Name="closeOptionsButton" Click="closeOptionsButton_Click" Height="150" Background="#FF01A2E8" Foreground="White" Grid.Row="3" Visibility="Hidden"/>
-                    <Label x:Name="heartRateLabel" Content="-- BPM" HorizontalAlignment="Left" Margin="10,35.419,0,0" Grid.Row="3" VerticalAlignment="Top" FontWeight="Bold" FontSize="48" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Height="62" Width="111"/>
-                    <Label x:Name="oxygenSatLabel" Content="-- %" HorizontalAlignment="Left" Margin="179,35.419,0,0" Grid.Row="3" VerticalAlignment="Top" FontWeight="Bold" FontSize="48" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Height="62" Width="66"/>
+                    <Label x:Name="heartRateLabel" Content="" HorizontalAlignment="Left" Margin="204,51.419,0,0" Grid.Row="3" VerticalAlignment="Top" FontWeight="Bold" FontSize="48" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Height="62" Width="134"/>
+                    <Label x:Name="oxygenSatLabel" Content="" HorizontalAlignment="Left" Margin="409,51.419,0,0" Grid.Row="3" VerticalAlignment="Top" FontWeight="Bold" FontSize="48" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Height="62" Width="161"/>
                     <Label x:Name="timerLabel" Content="timerLabel" HorizontalAlignment="Left" Margin="29,119.419,0,0" VerticalAlignment="Top" FontSize="64" FontWeight="Bold" Background="White" Foreground="#FF01A2E8" Grid.Row="2" Height="88" Width="331" Grid.RowSpan="2"/>
                     <k:KinectScrollViewer x:Name="selectTimeScrollViewer" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Hidden" HorizontalAlignment="Left" Margin="0,30,0,0" VerticalAlignment="Top" Height="195" Width="570" Foreground="#FF01A2E8" Grid.RowSpan="2" Grid.Row="1" Visibility="Hidden">
                         <k:KinectScrollViewer.HoverBackground>
@@ -49,6 +49,8 @@
                         <StackPanel Orientation="Horizontal" x:Name="workoutTimeScrollContent" />
                     </k:KinectScrollViewer>
                     <Label x:Name="optionsTimeLabel" Content="Select workout length in minutes:" HorizontalAlignment="Left" Margin="94,203,0,0" VerticalAlignment="Top" Height="55" Width="484" FontSize="32" Foreground="#FF01A2E8" Visibility="Hidden"/>
+                    <Label x:Name="heartRateLabel_Copy" Content="heartrate (BPM):" HorizontalAlignment="Left" Margin="10,56.419,0,0" Grid.Row="3" VerticalAlignment="Top" FontWeight="Bold" FontSize="36" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Height="62" Width="194"/>
+                    <Label x:Name="heartRateLabel_Copy1" Content="Sats:" HorizontalAlignment="Left" Margin="343,56.419,0,0" Grid.Row="3" VerticalAlignment="Top" FontWeight="Bold" FontSize="36" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Height="62" Width="60"/>
 
                 </Grid>
 
