--- a/Django/mysite/templates/main.html
+++ b/Django/mysite/templates/main.html
@@ -1,41 +1,49 @@
-<html lang="en-us" >
-<head>
-<title>Home | LifeCycle</title>
-<script type="text/javascript" src="/static/script.js"></script>
-<script type="text/javascript">window.__admin_media_prefix__ = "/static/admin/";</script>
-</head>
+{% load render_table from django_tables2 %}
+<!doctype html>
+{% load static %}
+<html>
+	<head>
+	<title>Home | LifeCycle</title>
+	<script type="text/javascript" src="/static/script.js"></script>
+	<script type="text/javascript">window.__admin_media_prefix__ = "/static/admin/";</script>
+	<link rel="stylesheet" href="{{ STATIC_URL }}django_tables2/themes/paleblue/css/screen.css" />
+	</head>
 
-<body background="http://test.scripts.psu.edu/users/m/p/mpc5185/BlueFadeBackground2.png" style ="background-repeat: repeat-x">
-{% csrf_token %}
-<div id="main">
-    <div id="header">
-	<h1 id="site-name" align="center">LifeCycle</h1>
-	<h2 align="right"><a href="/kinect/logout">LOGOUT</a>
+	<body background="http://test.scripts.psu.edu/users/m/p/mpc5185/BlueFadeBackground2.png" style ="background-repeat: repeat-x">
+	{% csrf_token %}
+	<div id="main">
+		<div id="header">
+			<h1 id="site-name" align="center">LifeCycle</h1>
+			<h2 align="right"><a href="/kinect/logout">LOGOUT</a></h2>
+		</div>
+		<div id="table">
+		</div>
+		<div id="content">
+			<table>
+				<tr>
+					<td>
+						<table style:"width= 400px">
+						<tr>
+							<td><a href="JavaScript:newPopup('/kinect/patientstats');"><img src="http://c.dryicons.com/images/icon_sets/classy_icons_set/png/128x128/globe.png" width="75" height="75" type="image/svg+xml"></img></a></td>
+							<td><a href="JavaScript:newPopup('/kinect/patientstats');">All Stats</a></td>
+						</tr>
+						<tr>
+							<td><a href="http://google.ca"><img src="http://www.i2clipart.com/cliparts/4/c/b/8/clipart-heart-4cb8.png" width="75" height="75" type="image/svg+xml"></img></a></td>
+							<td><a href="http://google.ca">Heart Rate Stats</a></td>
+						</tr>
+						<tr>
+							<td><a href="http://google.ca"><img src="http://czbeta.blob.core.windows.net/images/ab79bd7e-0ee7-4de3-8064-0562dcb07585_96px-Oxygen_symbol.svg.png" width="75" height="75" type="image/svg+xml"></img></a></td>
+							<td><a href="http://google.ca">02 Saturation Stats</a></td>
+						</tr>
+						</table>
+					</td>
+					<td style="vertical-align: top;" align="right" width="73%">{% render_table table %}</td>
+				</tr>
+			</table>
+		</div>
 	</div>
 
-    <div id="content">
-	<table style:"width= 400px">
-	<tr>
-	    <td><a href="JavaScript:newPopup('/kinect/patients');"><img src="http://icons.iconarchive.com/icons/icons-land/medical/256/People-Patient-Male-icon.png" width="75" height="75" type="image/svg+xml"></img></a></td>
-	    <td><a href="JavaScript:newPopup('/kinect/patients');">Patient List</a></td>
-	</tr>
-	<tr>
-	    <td><a href="JavaScript:newPopup('/kinect/patientstats');"><img src="http://c.dryicons.com/images/icon_sets/classy_icons_set/png/128x128/globe.png" width="75" height="75" type="image/svg+xml"></img></a></td>
-	    <td><a href="JavaScript:newPopup('/kinect/patientstats');">All Stats</a></td>
-	</tr>
-	<tr>
-	    <td><a href="http://google.ca"><img src="http://www.i2clipart.com/cliparts/4/c/b/8/clipart-heart-4cb8.png" width="75" height="75" type="image/svg+xml"></img></a></td>
-	    <td><a href="http://google.ca">Heart Rate Stats</a></td>
-	</tr>
-	<tr>
-	    <td><a href="http://google.ca"><img src="http://czbeta.blob.core.windows.net/images/ab79bd7e-0ee7-4de3-8064-0562dcb07585_96px-Oxygen_symbol.svg.png" width="75" height="75" type="image/svg+xml"></img></a></td>
-	    <td><a href="http://google.ca">02 Saturation Stats</a></td>
-	</tr>
-	</table>
-    </div>
-</div>
-
-</body>
+	</body>
 </html>
 
 
