--- a/CliniCycle/CliniCycle/MainWindow.xaml
+++ b/CliniCycle/CliniCycle/MainWindow.xaml
@@ -2,15 +2,13 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:k="http://schemas.microsoft.com/kinect/2013"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
-	x:Class="CliniCycle.MainWindow"
-	x:Name="Window"
-	Title="MainWindow"
-	Width="1024" Height="768" ResizeMode="CanMinimize">
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="CliniCycle.MainWindow"
+    Title="MainWindow" Width="1024" Height="768" ResizeMode="CanMinimize">
+    
     <Grid Margin="0,10,2,0">
-        <k:KinectSensorChooserUI HorizontalAlignment="Center" VerticalAlignment="Top" Name="sensorChooserUi" />
-        <k:KinectRegion Name="kinectRegion">
-            <Grid x:Name="LayoutRoot" OpacityMask="Black" RenderTransformOrigin="0.478,0.52" Background="White" Margin="0,0,2,0" >
+        <k:KinectSensorChooserUI HorizontalAlignment="Center" VerticalAlignment="Top" x:Name="sensorChooserUi" />
+        <k:KinectRegion x:Name="kinectRegion">
+            <Grid x:Name="LayoutRoot" RenderTransformOrigin="0.478,0.52" Background="White" Margin="0,0,2,0" >
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="257*"/>
@@ -53,7 +51,7 @@
                 </Border>
                 <k:KinectTileButton x:Name="buttonPatient6" Content="Button" HorizontalAlignment="Right" Margin="0,16,11,0" VerticalAlignment="Top" Width="160" Height="120" Click="patient4_Click" Background="Black" Opacity="0" Grid.Row="1" Grid.Column="1"/>
                 <k:KinectTileButton x:Name="buttonPatient1" Content="Button" HorizontalAlignment="Left" Margin="10,14,0,0" VerticalAlignment="Top" Width="160" Height="120" Click="patient1_Click" Background="#FF0A0202" Grid.Row="1" Opacity="0"/>
-
+                
 
             </Grid>
         </k:KinectRegion>
