--- a/LifeCycle/LifeCycle/MainWindow.xaml
+++ b/LifeCycle/LifeCycle/MainWindow.xaml
@@ -24,7 +24,7 @@
                     </Border>
                     <k:KinectTileButton Content="Options" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="60,294,0,0" VerticalAlignment="Top" Width="250" x:Name="showOptionsButton" Click="showOptionsButton_Click" Height="150" Background="White" Foreground="#FF01A2E8" FontSize="48" FontFamily="Microsoft Uighur"/>
                 </Grid>
-                <Grid HorizontalAlignment="Left" Height="737" VerticalAlignment="Top" Width="603" Margin="359,-10,-9,-28" Background="White">
+                <Grid HorizontalAlignment="Left" Height="737" VerticalAlignment="Top" Width="603" Margin="359,-9,-9,-28" Background="White">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="278*"/>
                         <RowDefinition Height="176*"/>
@@ -51,6 +51,7 @@
                     <Label x:Name="optionsTimeLabel" Content="Select workout length in minutes:" HorizontalAlignment="Left" Margin="94,203,0,0" VerticalAlignment="Top" Height="55" Width="484" FontSize="32" Foreground="#FF01A2E8" Visibility="Hidden"/>
                     <Label x:Name="heartRateLabel_Copy" Content="heartrate (BPM):" HorizontalAlignment="Left" Margin="10,56.419,0,0" Grid.Row="3" VerticalAlignment="Top" FontWeight="Bold" FontSize="36" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Height="62" Width="194"/>
                     <Label x:Name="heartRateLabel_Copy1" Content="Sats:" HorizontalAlignment="Left" Margin="343,56.419,0,0" Grid.Row="3" VerticalAlignment="Top" FontWeight="Bold" FontSize="36" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Height="62" Width="60"/>
+                    <Label x:Name="encouragementBox" Content="" HorizontalAlignment="Left" Margin="79,0,0,0" Grid.Row="1" VerticalAlignment="Top" Height="110" Width="400" FontSize="72" FontFamily="Microsoft Uighur"/>
 
                 </Grid>
 
