--- a/CliniCycle/CliniCycle/MainWindow.xaml
+++ b/CliniCycle/CliniCycle/MainWindow.xaml
@@ -3,7 +3,8 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:k="http://schemas.microsoft.com/kinect/2013"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
-	x:Class="CliniCycle.MainWindow"
+    xmlns:d3="http://research.microsoft.com/DynamicDataDisplay/1.0"
+    x:Class="CliniCycle.MainWindow"
 	x:Name="Window"
 	Title="MainWindow"
 	Width="1024" Height="768" ResizeMode="CanMinimize">
@@ -66,14 +67,21 @@
                 <Label  x:Name="heartRate6" HorizontalAlignment="Left" Height="27" Margin="591,135,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="166" FontSize="14.667" Grid.Column="1" Content="Heart Rate: --" Background="{x:Null}" Foreground="#FF0063FF"/>
                 <Label  x:Name="sat6" HorizontalAlignment="Left" Height="32" Margin="591,162,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="166" FontSize="14.667" Grid.Column="1" Content="Oxygen Sat:  --" Background="{x:Null}" Foreground="#FF0063FF"/>
                 <k:KinectTileButton Content="Exit" HorizontalAlignment="Left" LabelBackground="Brown" Margin="635,18,0,0" Width="100" x:Name="exitProgramButton" Click="exitProgramButton_Click" Height="50" Background="White" Foreground="#FF01A2E8" FontSize="48" FontFamily="Microsoft Uighur" VerticalAlignment="Top" Grid.Column="1" />
-                <TextBlock x:Name="patientBloodPressureBlock" HorizontalAlignment="Left" Margin="327,278,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="43" Width="356" FontWeight="Bold" FontSize="48" Background="White" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Grid.Row="1" Text="Blood Pressure:" Grid.Column="1"/>
+                <TextBlock x:Name="patientBloodPressureBlock" HorizontalAlignment="Left" Margin="327,278,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="43" Width="356" FontWeight="Bold" FontSize="48" Background="White" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Grid.Row="1" Grid.Column="1"><Run Text="Blood Pressure:"/><Run Language="en-ca" Text=" --"/></TextBlock>
                 <Image x:Name="HeartBeat" HorizontalAlignment="Left" Height="100" Margin="15,-12,0,0" VerticalAlignment="Top" Width="100" Source="heart_beat.png" Grid.Column="1" Grid.RowSpan="2"/>
-
-
-            </Grid>
+      </Grid>
         </k:KinectRegion>
         <Border x:Name="borderECG" BorderThickness="4" BorderBrush="#FF01A2E8" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="582,521,0,0" Height="175" Width="245">
-            <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="ecgFeed"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="-4" Width="245" Height="175" MouseEnter="patient1_Click" />
+            <d3:ChartPlotter x:Name="plotter" Margin="0,6,6,6">
+                <d3:ChartPlotter.HorizontalAxis>
+                    <d3:HorizontalDateTimeAxis x:Name="dateAxis"/>
+                </d3:ChartPlotter.HorizontalAxis>
+                <d3:Header FontFamily="Microsoft Uighur" Content="ECG Graph" Foreground="#FF01A2E8" />
+                <d3:VerticalAxisTitle FontFamily="Microsoft Uighur" Content="ECG" Foreground="#FF01A2E8"/>
+                <d3:HorizontalAxisTitle FontFamily="Microsoft Uighur" Content="Time" Foreground="#FF01A2E8"/>
+                <d3:HorizontalLine Value="{Binding MaxVoltage}" Stroke="Red" StrokeThickness="2"/>
+                <d3:HorizontalLine Value="{Binding MinVoltage}" Stroke="Red" StrokeThickness="2"/>
+            </d3:ChartPlotter>
         </Border>
         <Border x:Name="borderClinician" BorderThickness="4" BorderBrush="#FF01A2E8" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="836,576,0,0" Height="120" Width="160">
             <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="clinicianFeed"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="-4" Width="160" Height="120" MouseEnter="patient1_Click" />
